--- a/设计模式.vcxproj
+++ b/设计模式.vcxproj
@@ -140,6 +140,9 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="单例模式.cpp" />
+    <ClCompile Include="工厂方法模式.cpp" />
+    <ClCompile Include="抽象工厂模式.cpp" />
+    <ClCompile Include="简单工厂模式.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
